# Cepage

./: .cursorignore  .dockerignore  .env.example  .gitignore  AGENTS.md  CEPAGE-INSTALL.md  CEPAGE-UNINSTALL.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
apps/api/: package.json  tsconfig.build.json  tsconfig.json
apps/cli/: README.md  package.json  tsconfig.json
apps/daemon/: package.json  tsconfig.json
apps/web/: next.config.mjs  next.config.ts  package.json  tsconfig.json
docs/: .gitignore  README.md  beta-feedback-schema.json  beta-recruitment.md  beta-testing-checklist.md  beta-testing-guide.md  demo-video-script.md  getting-started-compiler.md
docs/adr/: 0001-skill-compiler-pivot.md
docs/install/: claude-code.md  cursor.md  opencode.md
docs/uninstall/: cursor.md  (+2 more)
e2e/: skill-compiler.test.ts
examples/: .gitignore
integrations/: README.md
integrations/webhooks-verify-python/: README.md  main.py  pyproject.toml
scripts/: apply-dev-cursor-agent-bin.mjs  benchmark-compilation.mjs  docker-entrypoint-api.sh  e2e-save-run.mjs  install.sh  run-api-dev.mjs  run-daemon-dev.mjs  run-node-tests.mjs  run-prisma.mjs  run-web-dev.mjs  scaffold-from-skill.mjs  uninstall.sh  wait-for-port.sh  workflow-real-tester-scenarios.mjs  workflow-real-tester.mjs
(+72 files in other folders)
